# RType-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  client.config  compile.sh  conanfile.txt  server.config
lib/Network/: CMakeLists.txt  conanfile.txt
lib/Network/include/: ANetwork.hpp  AsioClientTCP.hpp  AsioConnectionTCP.hpp  AsioConnectionUDP.hpp  AsioServerTCP.hpp  DataWrapper.hpp  IDataWrapper.hpp  INetwork.hpp  ISerializable.hpp  ITramBuffer.hpp  InfoConnection.hpp  LockedUnorderedMultimap.hpp  NetworkException.hpp  NetworkManager.hpp  formatString.hpp
lib/Network/include/Exceptions/: NetworkException.hpp
lib/Network/include/Tram/: ComponentSync.hpp  CreateEntityReply.hpp  CreateEntityRequest.hpp  DestroyEntity.hpp  GetRoomList.hpp  JoinCreateRoomReply.hpp  JoinRoom.hpp  Serializable.hpp  TramBuffer.hpp  header.hpp
lib/Network/include/utils/: timeDef.hpp
lib/Network/src/: DataWrapper.cpp  NetworkException.cpp  NetworkManager.cpp
lib/Network/src/Exceptions/: NetworkException.cpp
lib/Network/src/Network/: TcpTram.hpp
lib/Network/src/Tram/: ComponentSync.cpp  CreateEntityReply.cpp  CreateEntityRequest.cpp  DestroyEntity.cpp  GetRoomList.cpp  JoinCreateRoomReply.cpp  JoinRoom.cpp  Serializable.cpp  TramBuffer.cpp  header.cpp
lib/Network/src/client/: mainTestNetwork.cpp
lib/Network/src/server/: mainTestNetwork.cpp
lib/Network/tests/: test_formatString.cpp  test_serializer.cpp
lib/Network/tests/functional/: CMakeLists.txt  conanfile.txt  infiniteCommands.sh  launchCtest.sh  testServerClient.sh
lib/Sfml/: CMakeLists.txt
lib/Sfml/include/: FactoryObject.hpp  IGraphicalInterface.hpp  IGraphicalModule.hpp  SfmlModule.hpp  build.hpp  enum.hpp  graphical.hpp
lib/Sfml/include/Interface/: IAnimationManager.hpp  IAudioManager.hpp  IDrawable.hpp  IEventManager.hpp  IMovable.hpp  IResizable.hpp  ISpriteManager.hpp  ITextManager.hpp  IWindowManager.hpp
lib/Sfml/include/Item/: vector2D.hpp
lib/Sfml/src/: SfmlModule.cpp  test.cpp
lib/Sfml/src/AnimationManager/: AnimationManager.cpp  AnimationManager.hpp
lib/Sfml/src/EventManager/: EventManager.cpp  EventManager.hpp
lib/Sfml/src/GenericObject/: GenericObject.hpp
lib/Sfml/src/SpriteManager/: SpriteManager.cpp  SpriteManager.hpp
lib/Sfml/src/TextManager/: TextManager.cpp  TextManager.hpp
lib/Sfml/src/WindowManager/: WindowManager.cpp  WindowManager.hpp
libs/ConfigFile/: CMakeLists.txt
libs/ConfigFile/example/: example.config  main.cpp
libs/ConfigFile/include/: ConfigFile.hpp
libs/ConfigFile/src/: ConfigFile.cpp
libs/ConfigFile/src/ConfigFileTools/: ConfigFileTools.cpp  ConfigFileTools.hpp
libs/Enemies/Cancer/: CMakeLists.txt  Cancer.cpp  Cancer.hpp
libs/Enemies/PataPata/: CMakeLists.txt  PataPata.cpp  PataPata.hpp
libs/GameEngine/: CMakeLists.txt
libs/GameEngine/include/: ClusterName.hpp  EngineCore.hpp  EntityName.hpp  FactoryShortcuts.hpp  GameEngine.hpp  IAbstractSystem.hpp  IComponentTypeRegister.hpp  IEntityManager.hpp  IGameEngine.hpp  IScene.hpp  SystemPriority.hpp  env.hpp  global.hpp
libs/GameEngine/include/Event/: IEvent.hpp  IEventCallback.hpp
libs/GameEngine/include/Exception/: BasicException.hpp  FatalErrorException.hpp  InvalidParameterException.hpp  InvalidTypeException.hpp  NotFoundException.hpp  NotRegisteredException.hpp  RuntimeException.hpp
libs/GameEngine/src/: GameEngine.hpp
libs/GameEngine/src/AbstractScene/: AbstractScene.hpp
libs/GameEngine/src/AbstractSystem/: AbstractSystem.hpp
libs/GameEngine/src/BaseComponent/: BaseComponent.hpp
libs/GameEngine/src/ComponentManager/: ComponentManager.cpp  ComponentManager.hpp
libs/GameEngine/src/ComponentTypeRegister/: ComponentTypeRegister.hpp
libs/GameEngine/src/Components/: BaseTimer.hpp  EntityLinkComponent.hpp  EntityMask.hpp  EquipmentComponent.hpp  Hitbox.hpp  NumberComponent.hpp  Position.hpp  ScoreComponent.hpp  SizeComponent.hpp  Timer.hpp  Velocity.hpp
libs/GameEngine/src/Engine/: EngineFactory.cpp  EngineFactory.hpp  GameEngine.cpp  GameEngine.hpp
libs/GameEngine/src/EntityManager/: EntityManager.cpp  EntityManager.hpp
libs/GameEngine/src/EntityRegister/: EntityBlock.cpp  EntityBlock.hpp  EntityRegister.cpp  EntityRegister.hpp
libs/GameEngine/src/Exception/: BasicException.cpp
libs/GameEngine/src/NetworkIdRegister/: NetworkIdRegister.cpp  NetworkIdRegister.hpp
libs/GameEngine/src/SceneManager/: SceneManager.cpp  SceneManager.hpp
libs/GameEngine/src/SystemManager/: SystemManager.cpp  SystemManager.hpp
libs/GameEngine/src/Utils/: SignalManager.cpp  SignalManager.hpp  display.cpp  display.hpp
libs/Network/: .notes  CMakeLists.txt
libs/Network/include/: ANetwork.hpp  AsioClientTCP.hpp  AsioConnectionTCP.hpp  AsioConnectionUDP.hpp  AsioServerTCP.hpp  DataWrapper.hpp  INetwork.hpp  InfoConnection.hpp  NetworkManager.hpp
libs/Network/include/Asio/: ANetwork.hpp  AsioConnectionTCP.hpp  AsioConnectionUDP.hpp
libs/Network/include/Tram/: ComponentSync.hpp  CreateEntityReply.hpp  CreateEntityRequest.hpp  EndGame.hpp  GetRoomList.hpp  JoinCreateRoomReply.hpp  Serializable.hpp  TramBuffer.hpp
libs/Network/include/utils/: formatString.hpp  netVector2f.hpp  timeDef.hpp
libs/Network/src/: DataWrapper.cpp  NetworkException.cpp  NetworkManager.cpp
libs/Network/src/Exceptions/: NetworkException.cpp
libs/Network/src/Tram/: ComponentSync.cpp  CreateEntityReply.cpp  CreateEntityRequest.cpp  DestroyEntity.cpp  EndGame.cpp  GetRoomList.cpp  JoinCreateRoomReply.cpp  JoinRoom.cpp  Serializable.cpp  TramBuffer.cpp
libs/Network/tests/: test_serializer.cpp  unit_tests.cpp
libs/Network/tests/functional/: CMakeLists.txt  launchCtest.sh
libs/Sfml/: CMakeLists.txt
libs/Sfml/include/: build.hpp  color.hpp  exported.h  graphical.hpp
libs/Sfml/include/Item/: surface.hpp  (+2 more)
tests/GameEngine/EventTests/: AbstractEvent.cpp  AbstractEvent.hpp  CMakeLists.txt  EventCallBack.hpp  EventCallBackRegister.hpp  IEvent.hpp  IEventCallback.hpp  MultipleEvent.hpp  PrintEvent.hpp  PrintingSystem.cpp  PrintingSystem.hpp  Testglobal.cpp  Testglobal.hpp  launch_test.sh  main.cpp
(+325 files in other folders)
